<resources>
    <string name="app_name">PustakaKu</string>
    <string name="pustakaku">PUSTAKAKU</string>
    <string name="buku">Buku</string>
    <string name="pengarang">Pengarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_pengarang">DATA PENGARANG</string>
    <string name="data_book">DATA BOOK</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="nama_pengarang">Nama Pengarang</string>
    <string name="tahun_terbit">Tahun Terbit</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="id_pengarang">ID Pengarang</string>
    <string name="no_telepon">No Telepon</string>
    <string name="submit">SUBMIT</string>
    <string name="id_buku">ID Buku</string>
    <string name="jumlah_halaman">Jumlah Halaman</string>
    <string name="nomor_isbn">Nomor ISBN</string>
    <string name="permintaan_gagal">Permintaan Gagal</string>
    <string name="cek_koneksi">Cek Koneksi</string>
    <string name="wajib">Wajib Diisi</string>
    <string name="delete">DELETE</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="update">UPDATE</string>
    <string name="onprogress_del">Sedang Menghapus Data</string>
    <string name="please_wait">Mohon Menunggu</string>
    <string name="onprogress_update">Sedang Mengubah Data</string>
    <string name="failed_getId">Silahkan Isi Pengarang Terlebih Dahulu</string>
</resources>