<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DetailBookFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_detail_book"
            style="@style/card_view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_judulBuku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_buku"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/judul_buku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/txt_namaPengarang"
                    android:text="@string/judul_buku"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_namaPengarang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_judulBuku"
                    android:layout_marginTop="10dp"
                    android:text="@string/nama_pengarang"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nama_pengarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_judulBuku"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/nama_pengarang"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_jumlahhalaman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_namaPengarang"
                    android:layout_marginTop="10dp"
                    android:text="@string/jumlah_halaman"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/jumlah_halaman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_namaPengarang"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/jumlah_halaman"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/pembatas"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/jumlah_halaman"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/txt_nomorisbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pembatas"
                    android:layout_marginTop="10dp"
                    android:text="@string/nomor_isbn"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nomor_isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pembatas"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/nomor_isbn"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_tahunTerbit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_nomorisbn"
                    android:layout_marginTop="10dp"
                    android:text="@string/tahun_terbit"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tahun_terbit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_nomorisbn"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/tahun_terbit"
                    android:textSize="14sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/layout_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_detail_book"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/img_edit"
                android:text="@string/ubah_data" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_delete"
            style="@style/button"
            android:layout_below="@+id/layout_edit"
            android:text="@string/delete" />


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>