<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DetailAuthorFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_detail_author"
            style="@style/card_view">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_namaPengarang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nama_pengarang"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nama_pengarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/nama_pengarang"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_namaPengarang"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_namaPengarang"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/email"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/pembatas"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/txt_email"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/txt_telpn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pembatas"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_telepon"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notelpn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pembatas"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/no_telepon"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_telpn"
                    android:layout_marginTop="10dp"
                    android:text="@string/alamat"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_telpn"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/txt_namaPengarang"
                    android:text="@string/alamat"
                    android:textSize="14sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/layout_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_detail_author"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/img_edit"
                android:text="@string/ubah_data" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_delete"
            style="@style/button"
            android:layout_below="@+id/layout_edit"
            android:text="@string/delete" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>

