<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_namaPengarang"
                android:text="@string/nama_pengarang"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/nama_pengarang"
                android:text="@string/nama_pengarang"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/txt_namaPengarang"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_email"
                android:text="@string/email"
                android:textSize="17sp"
                android:layout_below="@+id/txt_namaPengarang"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/email"
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_below="@+id/txt_namaPengarang"
                android:layout_toRightOf="@+id/txt_namaPengarang"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:maxLength="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_alamat"
                android:text="@string/alamat"
                android:textSize="17sp"
                android:layout_below="@+id/txt_email"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/alamat"
                android:text="@string/alamat"
                android:textSize="16sp"
                android:layout_below="@+id/txt_email"
                android:layout_toRightOf="@+id/txt_namaPengarang"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>